--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
 </head>
 
-<body>
+body>
     <div id="app">
         <div class="nav-bar"></div>
 
@@ -19,31 +19,30 @@
         <div class="product-display">
             <div class="product-container">
                 <div class="product-image">
-                    <img v-if="inStock" :src="image">
-                    <img v-else class=out-of-stock-img :src="image">
+                    <img v-if ="inStock" :src="image">
+                    <img v-else class ="out-of-stock-img" :src="image">
                 </div>
                 <div class="product-info">
                     <h1 v-if="onSale == true">{{ onSaleja }}</h1>
                     <h1 v-else>{{ title }}</h1>
-                    
                     <p v-if="inventory > 10">In Stock</p>
                     <p v-else-if="inventory <= 10 && inventory > 0">In Stock</p>
                     <p v-else>Out of Stock</p>
                     <ul>
                         <li v-for="detail in details">{{ detail }}</li>
                     </ul>
-                    <div v-for="(variant,index) in variants" :key="variant.id" @mouseover="updateVariant(index)" class="color-circle" :style=" {backgroundColor:variant.color } "></div>
+                    <div v-for= "(variant,index) in variants" :key="variant.id" @mouseover="updateVariant(index)" class="color-circle":style="{backgroundColor: variant.color}"></div>
+                    <button class=" button " :disabled='!inStock':class="{disabledButton:!inStock}" @click="addToCart ">Add to Cart</button>
+                    
                 </div>
-                <button class=" button " :disabled='!inStock' :class="{disabledButton: !instock}" @click="addToCart ">Add to Cart</button>
             </div>
         </div>
-    </div>
     </div>
 
     <!-- Import Js -->
     <script src="./main.js "></script>
     <script>
-        const mountedApp = app.mount(' #app ')
+        const mountedApp = app.mount('#app')
     </script>
 </body>
 
