--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="./main.js "></script>
 
     <script src="./components/ProductDisplay.js"></script>
+    <script src="./components/ProductDetails.js"></script>
     <script>
         const mountedApp = app.mount(' #app ')
     </script>
