--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div id="app">
         <div class="nav-bar"></div>
 
-        <div class="cart">Cart({{ cart }})</div>
-        <product-display :premium="premium"></product-display>
-    </div>
+        <div class="cart">Cart({{ 'green '+ cart[0] +', '+ ' blue ' + cart[1] }})</div>
+        <product-display :premium="premium"
+        @add-to-cart="updateCart"@remove-from-cart="removeFromCart"></product-display>
 
     <!-- Import Js -->
     <script src="./main.js "></script>
