--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <div class="cart">Cart({{ cart }})</div>
         <product-display :premium="premium"></product-display>
+        <product-display ></product-display>
     </div>
 
     <!-- Import Js -->
