--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
 </head>
 
-<<body>
+<body>
     <div id="app">
         <div class="nav-bar"></div>
 
